added student view files

--- a/src/main/resources/templates/add-exam.html
+++ b/src/main/resources/templates/add-exam.html
@@ -81,11 +81,11 @@
                 <a th:href="@{/exam/add}" class="nav-item font-bold active flex items-center px-4 py-2 transition-colors">
                     Add Exams
                 </a>
-                <a th:href="@{/exam/getExams}" class="nav-item flex items-center text-sm px-4 py-2 hover:bg-gray-100 rounded-md transition-colors">
+                <a th:href="@{/exam/get}" class="nav-item flex items-center text-sm px-4 py-2 hover:bg-gray-100 rounded-md transition-colors">
                      View Exams
                 </a>
                 <a th:href="@{/hallAllocation/select-course}" class="nav-item flex text-sm items-center px-4 py-2 hover:bg-gray-100 rounded-md transition-colors">
-                    Hall Arrangements
+                    View Hall Arrangement
                 </a>
             </nav>
         </div>
@@ -108,7 +108,7 @@
             <div class="form-card rounded-lg overflow-hidden bg-white animate-slide-up">
                 <!-- Header -->
                 <div class="bg-primary-500 px-6 py-4">
-                    <h2 class="text-xl font-semibold text-white">Add New Exam</h2>
+                    <h2 class="text-xl font-semibold text-white">Add Exam</h2>
                 </div>
 
                 <!-- Form -->
@@ -157,7 +157,7 @@
                         <div class="pt-4 flex justify-center">
                             <button type="submit"
                                     class=" bg-green-500 hover:bg-green-600 text-white text-sm font-medium py-2 px-6 rounded-full shadow transition-colors duration-200">
-                                Add Exam
+                                Submit
                             </button>
 
                         </div>
