--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -81,10 +81,10 @@
                     A ready to use <b> Exam scheduler</b> with <b>automated hall allocation</b>, and  for educational institutions
                 </p>
                 <div class="flex justify-center gap-20">
-                    <a th:href="@{/exammaster/dashboard}" class="inline-block px-8 py-3 bg-green-600 text-white font-medium rounded-md hover:bg-green-700 transition shadow-md hover:scale-105 duration-200">
+                    <a th:href="@{/exammaster/login}" class="inline-block px-8 py-3 bg-green-600 text-white font-medium rounded-md hover:bg-green-700 transition shadow-md hover:scale-105 duration-200">
                         Let's Start As Admin
                     </a>
-                    <a th:href="@{/exammaster/studentDashboard}" class="inline-block px-8 py-3 bg-green-600 text-white font-medium rounded-md hover:bg-green-700 transition shadow-md hover:scale-105 duration-200">
+                    <a th:href="@{/exammaster/login}" class="inline-block px-8 py-3 bg-green-600 text-white font-medium rounded-md hover:bg-green-700 transition shadow-md hover:scale-105 duration-200">
                         Let's Start As Student
                     </a>
                 </div>
