Added signup and student redirect

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -67,8 +67,8 @@
                         </span>
                 </a>
 
-                <a th:href="@{/login}" class="px-4 py-2 bg-green-600 text-white rounded-md hover:bg-gmail-700 transition">
-                    Sign In
+                <a th:href="@{/auth/signup}" class="px-4 py-2 bg-green-600 text-white rounded-md hover:bg-gmail-700 transition">
+                    Sign Up
                 </a>
             </div>
         </header>
