--- a/src/main/resources/templates/student-dashboard.html
+++ b/src/main/resources/templates/student-dashboard.html
@@ -75,7 +75,7 @@
             </nav>
         </div>
         <div class="p-4 border-t border-gmail-200">
-            <a th:href="@{/logout}"
+            <a th:href="@{/exammaster/logout}"
                class=" w-1/2 flex justify-center items-center border rounded-full bg-green-500 font-bold px-4 py-2 text-sm text-white hover:bg-gmail-100 rounded transition-colors">
                 Logout
             </a>
