--- a/src/main/resources/templates/select-hall-seat-course.html
+++ b/src/main/resources/templates/select-hall-seat-course.html
@@ -92,7 +92,7 @@
         </div>
 
         <div class="p-4 border-t border-gmail-200">
-            <a th:href="@{/logout}"
+            <a th:href="@{/exammaster/logout}"
                class=" w-1/2 flex  justify-center items-center rounded-full font-bold bg-green-500 px-4 py-2 text-sm text-white hover:bg-gmail-100 rounded transition-colors">
                 Logout
             </a>
