--- a/src/main/resources/templates/student-view-hall.html
+++ b/src/main/resources/templates/student-view-hall.html
@@ -86,7 +86,7 @@
         </div>
 
         <div class="p-4 border-t border-gray-200">
-            <a th:href="@{/logout}"
+            <a th:href="@{/exammaster/logout}"
                class="w-1/2 flex justify-center items-center rounded-full font-bold bg-green-500 px-3 py-2 text-sm text-white hover:bg-green-600 transition-colors">
                 Logout
             </a>
