--- a/src/main/resources/templates/view-exam.html
+++ b/src/main/resources/templates/view-exam.html
@@ -90,7 +90,7 @@
         </div>
 
         <div class="p-4 border-t border-gmail-200">
-            <a th:href="@{/logout}"
+            <a th:href="@{/exammaster/logout}"
                class=" w-1/2 flex justify-center items-center rounded-full bg-green-500 font-bold px-3 py-2 text-sm text-white hover:bg-gmail-100 rounded transition-colors">
                 Logout
             </a>
